# codeshare

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Readme.md  docker-compose.yml  entrypoint.sh  gunicorn.config.py  main.py  manage.py  pyproject.toml  requirements.txt  schema.sql
.github/workflow/: main.yml
.github/workflows/: main.yml
admin/: dependencies.py  services.py  urls.py  views.py
auth/: auth_dependencies.py  dependencies.py  models.py  schema.py  schemas.py  services.py  url.py  urls.py  views.py
code/: models.py  schemas.py  urls.py
code_app/: dependencies.py  models.py  schemas.py  services.py  urls.py  views.py
codeshare/: db_init.py  init.py  main.py  queries.py  settings.py
codeshare/home/: routes.py  url.py  views.py
codeshare/migrations/models/: 0_20220610135924_init.sql
codeshare/routers/: routes.py
core/: models.py  schema.py  schemas.py  urls.py  views.py
home/: auth_dependencies.py  dependencies.py  models.py  schema.py  url.py  views.py
language/: dependencies.py  models.py  schemas.py  services.py  urls.py  views.py
miscellaneous/: Readme.md  dependencies.txt  models.txt  schemas.txt  urls.txt
sockets/: dependencies.py  main.py  manager.py  redis_init.py
tests/: test_admin_services.py  test_auth_services.py
